--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                             </p>
                             <a href="" class="btn btn-lg">Watch Free For 30 days</a>
                         </div>
-                        <img src="../img/tab-content-1.png" alt="">
+                        <img src="img/tab-content-1.png" alt="">
                     </div>
                 </div>
                <div id="tab-2-content" class="tab-content-item">
@@ -63,19 +63,19 @@
                     </div>
                     <div class="tab-2-content-bottom">
                         <div>
-                            <img src="../img/tab-content-2-1.png" alt="">
+                            <img src="img/tab-content-2-1.png" alt="">
                             <p class="text-md">Watch on your TV</p>
                             <p class="text-dark">Samrt TVs, Playstation, Xbox, Chromecast, Apple TV, Blu-ray players and more.</p>
                         </div>
                         <div>
-                            <img src="../img/tab-content-2-2.png" alt="">
+                            <img src="img/tab-content-2-2.png" alt="">
                             <p class="text-md">Watch instantly or download for later</p>
                             <p class="text-dark">
                                 Available on phone and tablet, wherever you go.
                             </p>
                         </div>
                         <div>
-                            <img src="../img/tab-content-2-3.png" alt="">
+                            <img src="img/tab-content-2-3.png" alt="">
                             <p class="text-md">Use any computer</p>
                             <p class="text-dark">
                                 Watch right on Netflix.com
